@@ -250,6 +250,12 @@ int msDrawRasterLayerGDAL(mapObj *map, layerObj *layer, imageObj *image,
         src_ysize = MIN(MAX(0,(int) (lly - ury + 0.5)),
                         GDALGetRasterYSize(hDS) - src_yoff);
 
+	/* We want very small windows to use at least one source pixel (#4172) */
+	if( src_xsize == 0 && (urx - llx) > 0.0 )
+	    src_xsize = 1;
+	if( src_ysize == 0 && (lly - ury) > 0.0 )
+	    src_ysize = 1;
+
         if( src_xsize == 0 || src_ysize == 0 )
         {
             if( layer->debug )
